# sarna-insights-v2

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: GRPC_INTEGRATION.md  LLM_TESTING_RESULTS.md  pyproject.toml  requirements-minimal.txt  requirements.txt  test_grpc_connection.py  test_margin_response.json  test_simple_connection.py
backend/api/: dependencies.py  main.py  middleware.py
backend/core/: config.py  logging.py
backend/db/: base.py  models.py  session.py
backend/models/: requests.py  responses.py
backend/routers/: chat.py  data.py  health.py  visualizations.py
backend/scripts/: fix_proto_imports.py
backend/services/: cache_service.py  data_anonymizer.py  grpc_client.py  llm_service.py  time_machine.py
backend/tests/: test_cache_integration.py  test_llm_providers.py
backend/tests/fixtures/: MarginManagerResponse.txt  README.md
context/: COMMON_TASKS.md  CRITICAL_FIXES_2025-07-03.md  FRONTEND_RISK_MATRIX_IMPLEMENTATION.md  NEXT_SESSION_AI_ASSISTANT.md  NEXT_SESSION_FIX_BROKEN_PAGE.md  NEXT_SESSION_QUICKSTART.md  NEXT_SESSION_RAG_IMPLEMENTATION.md  NEXT_SESSION_RISK_CALCULATIONS.md  NEXT_SESSION_TODO.md  NEXT_SESSION_VISUALIZATION_PARSING.md  PROJECT_CHECKLIST.md  PROJECT_INFO.md  PROJECT_STATE.md  PROTO_FIX_COMMITTED_2025-07-03.md  QUICK_START.md  README.md  ROADMAP.md  SESSION_HISTORY.md  SESSION_SUMMARY_2025-01-05_ENHANCED_PORTFOLIO.md  SESSION_SUMMARY_2025-01-05_EVENING_POSITIONS_FIXED.md  SESSION_SUMMARY_2025-01-05_FINAL.md  SESSION_SUMMARY_2025-01-05_POSITIONS.md  SESSION_SUMMARY_2025-06-30.md  (+19 more)
docs/: API.md  (+4 more)
(+173 files in other folders)
